# control_suite_mcp_aps_2idd

./: .gitignore  README.md  config.toml  pyproject.toml
src/control_suite_mcp_aps_2idd/: __init__.py  acquisition_processing.py  aps_tools.py  common.py  health.py  instrument.py  launcher.py  mcp_server.py  protocol.py  qserver_client.py  qserver_instrument.py  util.py  worker.py  zmq_client.py
tests/: conftest.py  test_acquisition_buffers.py  test_acquisition_processing.py  test_common.py  test_health.py  test_launcher.py  test_mcp_server.py  test_qserver_client.py  test_qserver_instrument.py  test_worker_client.py
