[project]
name = "control-suite-mcp-aps-2idd"
version = "0.1.0"
description = "FastMCP control suite for APS 2-ID-D MIC acquisition tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bluesky-queueserver-api",
    "fastmcp>=2.0",
]

[project.scripts]
control-suite-aps-2idd-mcp = "control_suite_mcp_aps_2idd.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/control_suite_mcp_aps_2idd"]

[tool.ruff]
line-length = 99
